fixed info request form size on mobile

--- a/src/client/scss/lightbox.scss
+++ b/src/client/scss/lightbox.scss
@@ -28,7 +28,7 @@
     margin: auto;
     margin-top: 25px;
     padding: 25px;
-    width: 300px;
+    width: 250px;
     height: auto;
     overflow: auto;
     background-color: white;
