--- a/ui/style.css
+++ b/ui/style.css
@@ -135,7 +135,7 @@ a:hover {
   margin: auto;
   margin-top: 25px;
   padding: 25px;
-  width: 300px;
+  width: 250px;
   height: auto;
   overflow: auto;
   background-color: white;
